--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -106,6 +106,7 @@
 <script src="js/controllers/domain.js"></script>
 <script src="js/controllers/signup.js"></script>
 <script src="js/controllers/report.js"></script>
+<script src="js/controllers/suddenChange.js"></script>
 <script src="js/controllers/flow-edit.js"></script>
 <script src="js/controllers/dashBoard.js"></script>
 <script src="js/controllers/conversion.js"></script>
