fraudFilter html update 0420

--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -107,6 +107,7 @@
 <script src="js/controllers/signup.js"></script>
 <script src="js/controllers/report.js"></script>
 <script src="js/controllers/suddenChange.js"></script>
+<script src="js/controllers/fraudFilter.js"></script>
 <script src="js/controllers/flow-edit.js"></script>
 <script src="js/controllers/dashBoard.js"></script>
 <script src="js/controllers/conversion.js"></script>
