--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -149,7 +149,7 @@
                         <md-button ng-click="goSuddenChange()">SuddenChange</md-button>
                       </md-menu-item>
                       <md-menu-item>
-                        <md-button ng-click="ctrl.sampleAction('new', $event)">FraudFilter</md-button>
+                        <md-button ng-click="goFraudFilter()">FraudFilter</md-button>
                       </md-menu-item>
                     </md-menu-content>
                   </md-menu>
