添加rule页面和相关api接口

--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -114,6 +114,7 @@
 <script src="js/controllers/tsReport.js"></script>
 <script src="js/controllers/tsOfferReport.js"></script>
 <script src="js/directives/permission.js"></script>
+<script src="js/controllers/automatedRule.js"></script>
 <!-- endbuild -->
 
 <script>
