--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -141,6 +141,7 @@
               <md-menu-bar>
                   <md-menu>
                     <button ng-click="$mdMenu.open()" class="type-title">
+                      <i class="icon-cogs"></i>
                       Tool
                     </button>
                     <md-menu-content>
