--- a/Front/src/tpl/automatedRule-edit-dialog.html
+++ b/Front/src/tpl/automatedRule-edit-dialog.html
@@ -11,7 +11,7 @@
                 <label class="col-sm-3 control-label">Rule Name<span class="star-icon">*</span>：</label>
                 <div class="col-sm-7">
                     <input type="text" name="name" class="form-control" ng-model="item.name" required>
-                    <span style="color:red" ng-show="editForm.name.$invalid">
+                    <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
                         <span ng-show="editForm.name.$error.required">Name is required.</span>
                     </span>
                 </div>
@@ -19,56 +19,71 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Campaign<span class="star-icon">*</span>: </label>
                 <div class="col-sm-7">
-                    <selectize config='campaignFilter.config' options='campaignFilter.options' ng-model="campaigns" required></selectize>
+                    <selectize config='campaignFilter.config' options='campaignFilter.options' ng-model="item.campaigns" placeholder="Select some campaigns" required></selectize>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Number of offers<span class="star-icon">*</span>：</label>
-                <div class="col-sm-7">
-                    <input type="text" name="numberOfOffers" class="form-control" ng-model="item.numberOfOffers" required>
-                    <span style="color:red" ng-show="editForm.numberOfOffers.$dirty && editForm.numberOfOffers.$invalid">
-                    <span ng-show="editForm.numberOfOffers.$error.required">NumberOfOffers is required.</span>
-                    </span>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-3 control-label">Country: </label>
+                <label class="col-sm-3 control-label">Dimension<span class="star-icon">*</span>: </label>
                 <div class="col-sm-7 my-select">
-                    <md-select aria-label="Country" class="cs-subform-select" name="country"
-                        ng-disabled="countryInputDisabled"
-                        ng-model="item.country"
-                        ng-change="countryChanged(item.country)"
-                    >
-                        <md-option value="{{country.value}}" ng-repeat="country in countries">{{country.display}}</md-option>
+                    <md-select aria-label="Dimension" class="cs-subform-select" ng-model="item.dimension">
+                        <md-option value="{{dimension}}" ng-repeat="dimension in dimensions track by $index">{{dimension}}</md-option>
                     </md-select>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Click Url：</label>
-                <div  class="col-sm-7">
-                    <input type="text" class="form-control" ng-model="clickUrl" readonly>
-                </div>
-                <div class="col-sm-2">
-                    <md-button clipboard class="md-raised copied-btn" ng-show="clickUrl" text="clickUrl" ng-click="itemUrlClick()">
-                        <i class="material-icons">content_copy</i>
-                        {{btnWord}}
-                    </md-button>
+                <label class="col-sm-3 control-label">Using Data from<span class="star-icon">*</span>: </label>
+                <div class="col-sm-7 my-select">
+                    <md-select aria-label="DataFrom" class="cs-subform-select" ng-model="item.dataFrom">
+                        <md-option value="{{datafrom}}" ng-repeat="datafrom in dataFroms track by $index">{{datafrom}}</md-option>
+                    </md-select>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Tags：</label>
-                <div class="col-sm-7">
-                    <selectize config='tagsFilter.config' options='tagsFilter.options' ng-model="tags"></selectize>
-                    <!-- <md-chips
-                            ng-model="tags"
-                            readonly="ctrl.readonly"
-                            md-removable="ctrl.removable"
-                            placeholder="Enter a tag"
-                            delete-button-label="Remove Tag"
-                            delete-hint="Press delete to remove tag"
-                            secondary-placeholder="+Tag"
-                            md-max-chips="10">
-                    </md-chips> -->
+                <label class="col-sm-3 control-label">If<span class="star-icon">*</span>: </label>
+                <div class="col-sm-7 my-select" ng-repeat="(conArrIdx, condition) in conditionArray">
+                    <md-select aria-label="ConditionKey" class="cs-subform-select" ng-model="conditionArray[conArrIdx].key">
+                        <md-option value="{{con.key}}" ng-repeat="con in conditions" ng-disabled="conditionDisable(con, conArrIdx)">{{con.display}}</md-option>
+                    </md-select>
+                    <md-select aria-label="ConditionOperand" class="cs-subform-select" ng-model="condition.operand">
+                        <md-option value="0">></md-option>
+                        <md-option value="1"><</md-option>
+                    </md-select>
+                    <input type="text" name="conValue" class="cs-subform-select" ng-model="condition.value" required>
+                    <span style="color:red" ng-show="editForm.conValue.$dirty && editForm.conValue.$invalid">
+                        <span ng-show="editForm.conValue.$error.required">Value is required.</span>
+                    </span>
+                    <em ng-click="deleteCondition(condition)" class="em-close" ng-if="$index > 0">x</em>
+                </div>
+                <div class="col-sm-7"><em ng-click="addCondition()" ng-if="conditionArray.length < conditions.length">+Add another</em></div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Then<span class="star-icon">*</span>：</label>
+                <div class="col-sm-7 campaign-radio">
+                    <label class="radio-inline">
+                        <input type="radio" ng-model="item.then" value="0">Include
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" ng-model="item.then" value="1">Exclude
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Frequency<span class="star-icon">*</span>: </label>
+                <div class="col-sm-7 my-select">
+                    <md-select aria-label="DataFrom" class="cs-subform-select" ng-model="item.frequency">
+                        <md-option value="{{frequency}}" ng-repeat="frequency in frequencys track by $index">{{frequency}}</md-option>
+                    </md-select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Execution Type<span class="star-icon">*</span>：</label>
+                <div class="col-sm-7 campaign-radio">
+                    <label class="radio-inline">
+                        <input type="radio" ng-model="item.executionType" value="0">Modify Based on Current Settings
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" ng-model="item.executionType" value="1">Replace Current Settings
+                    </label>
                 </div>
             </div>
         </form>
