--- a/Front/src/tpl/suddenChange.html
+++ b/Front/src/tpl/suddenChange.html
@@ -9,8 +9,8 @@
                   <div class="left-con">
                     <div class="selectAll">
                       <label class="cs-subform-label date-title ng-binding">Status：</label>
-                        <md-select aria-label="select" class="cs-subform-select" ng-model="activeStatus" ng-disabled="groupBy[1] || activeStatusIsDisabled()">
-                            <md-option value="0" selected>All</md-option>
+                        <md-select aria-label="select" class="cs-subform-select" ng-model="query.activeStatus" ng-change="statusChange()">
+                            <md-option value="0">All</md-option>
                             <md-option value="1">Active</md-option>
                             <md-option value="2">Inactive</md-option>
                         </md-select>
@@ -19,7 +19,7 @@
                   <div class="right-select clearfix">
                     <div class="cs-subform-control search-con">
                         <label class="cs-subform-label date-title ng-binding">Keyword Search：</label>
-                        <input type="text" class="cs-filter-input" ng-model="searchFilter" placeholder="Search...">
+                        <input type="text" class="cs-filter-input" ng-model="query.searchFilter" placeholder="Search..." ng-change="statusChange()">
                     </div>
                   </div>
               </div>
@@ -34,7 +34,7 @@
                           </tr>
                         </thead>
                         <tbody md-body>
-                          <tr ms-row ng-repeat="tr in list.rules">
+                          <tr ms-row ng-repeat="tr in list.rules track by $index">
                             <td md-cell>{{tr.name}}</td>
                             <td md-cell>
                               {{tr.campaigns}}
@@ -46,7 +46,7 @@
                             <td md-cell>{{tr.frequency}}</td>
                             <td md-cell>{{tr.dataFrom}}</td>
                             <td md-cell>
-                              <a  class="status-icon" ng-class="{'isGray': tr.status == 0}">
+                              <a  class="status-icon" ng-class="{'isGray': tr.status == 0}" ng-click="ruleStatusChange($index)">
                                 <i class="icon-ok-sign"></i>
                                 <md-tooltip md-direction="bottom">
                                   Change rule status
@@ -60,7 +60,7 @@
                                   Edit automate rules
                                 </md-tooltip>
                               </a>
-                              <a  class="opera-icon" ng-click="deleteRule($event)">
+                              <a  class="opera-icon" ng-click="deleteRule(tr.id)">
                                 <i class="icon-trash"></i>
                                 <md-tooltip md-direction="bottom">
                                   Delete this automate rule
@@ -80,7 +80,22 @@
           <div class="cs-action-bar-bg">
               <div class="cs-action-bar clearfix">
                   <div class="left-con">
-                    <div class="cs-subform-control">
+                    <div class="cs-subform-group">
+                      <md-select aria-label="select" class="cs-subform-select" ng-model="datetype" ng-change="logQueryChange()">
+                          <md-option value="1">Today</md-option>
+                          <md-option value="2">Yesterday</md-option>
+                          <md-option value="3">Last 7 days</md-option>
+                          <md-option value="4">Last 14 days</md-option>
+                          <md-option value="5">This Week</md-option>
+                          <md-option value="6">Last Week</md-option>
+                          <md-option value="7">This Month</md-option>
+                          <md-option value="8">Last Month</md-option>
+                          <md-option value="9">This Year</md-option>
+                          <md-option value="10">Last Year</md-option>
+                          <md-option value="0">Custom</md-option>
+                      </md-select>
+                    </div>
+                    <div class="cs-subform-control" ng-show="datetype==0">
                       <label class="cs-subform-label date-title">{{'Date Range' | translate}}：</label>
                       <div class="cs-subform-control">
                               <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="fromDate"
@@ -98,25 +113,10 @@
                               </button>
                             </div>
                     </div>
-                    <div class="cs-subform-group">
-                      <md-select aria-label="select" class="cs-subform-select" ng-model="datetype">
-                          <md-option value="1" selected>Today</md-option>
-                          <md-option value="2">Yesterday</md-option>
-                          <md-option value="3">Last 7 days</md-option>
-                          <md-option value="4">Last 14 days</md-option>
-                          <md-option value="5">This Week</md-option>
-                          <md-option value="6">Last Week</md-option>
-                          <md-option value="7">This Month</md-option>
-                          <md-option value="8">Last Month</md-option>
-                          <md-option value="9">This Year</md-option>
-                          <md-option value="10">Last Year</md-option>
-                          <md-option value="0">Custom</md-option>
-                      </md-select>
-                    </div>
                   </div>
                   <div class="right-select">
                     <div class="cs-subform-control search-con">
-                        <input type="text" class="cs-filter-input" ng-model="searchFilter" placeholder="Search...">
+                        <input type="text" class="cs-filter-input" ng-model="queryLog.searchFilter" placeholder="Search..." ng-change="logQueryChange()">
                     </div>
                   </div>
               </div>
@@ -135,7 +135,7 @@
                             <td md-cell>{{tr.time}}</td>
                             <td md-cell>{{tr.name}}</td>
                             <td md-cell>
-                              <a class="status-icon" ng-click="viewLogs($event)">
+                              <a class="status-icon" ng-click="viewLogs(tr)">
                                 <i class="icon-eye-open"></i>
                                 <md-tooltip md-direction="bottom">
                                   View automate logs
