--- a/Front/src/tpl/ts-report.html
+++ b/Front/src/tpl/ts-report.html
@@ -112,7 +112,7 @@
   <div class="breadcrumb-div" ng-if="groupBy != 'campaignId'">
     <ul class="breadcrumb">
       <li ng-click="backToAllCampaign()"><em style="color: dodgerblue">Back</em></li>
-      <li><em>{{campaignId}}</em></li>
+      <li><em>{{campaignName}}</em></li>
     </ul>
   </div>
   <div class="table-box" ng-class="{'offer-table-height': !taskProgress[thirdPartyTrafficSourceId].offerStatus}">
