--- a/Front/src/tpl/fraudFilter.html
+++ b/Front/src/tpl/fraudFilter.html
@@ -9,8 +9,8 @@
                   <div class="left-con">
                     <div class="selectAll">
                       <label class="cs-subform-label date-title ng-binding">Status：</label>
-                        <md-select aria-label="select" class="cs-subform-select" ng-model="activeStatus" ng-disabled="groupBy[1] || activeStatusIsDisabled()">
-                            <md-option value="0" selected>All</md-option>
+                        <md-select aria-label="select" class="cs-subform-select" ng-model="query.activeStatus" ng-change="statusChange()">
+                            <md-option value="0">All</md-option>
                             <md-option value="1">Active</md-option>
                             <md-option value="2">Inactive</md-option>
                         </md-select>
@@ -19,7 +19,7 @@
                   <div class="right-select clearfix">
                     <div class="cs-subform-control search-con">
                         <label class="cs-subform-label date-title ng-binding">Keyword Search：</label>
-                        <input type="text" class="cs-filter-input" ng-model="searchFilter" placeholder="Search...">
+                        <input type="text" class="cs-filter-input" ng-model="query.searchFilter" placeholder="Search..." ng-change="statusChange()">
                     </div>
                   </div>
               </div>
@@ -34,7 +34,7 @@
                           </tr>
                         </thead>
                         <tbody md-body>
-                          <tr ms-row ng-repeat="tr in trs">
+                          <tr ms-row ng-repeat="tr in list.rules track by $index">
                             <td md-cell>{{tr.name}}</td>
                             <td md-cell>
                               {{tr.campaigns}}
@@ -42,11 +42,11 @@
                                 {{tr.campaigns}}
                               </md-tooltip>
                             </td>
-                            <td md-cell>{{tr.action}}</td>
-                            <td md-cell>{{tr.frequerncy}}</td>
-                            <td md-cell>{{tr.datafrom}}</td>
+                            <td md-cell>{{tr.dimension}}</td>
+                            <td md-cell>{{tr.frequency}}</td>
+                            <td md-cell>{{tr.timeSpan}}</td>
                             <td md-cell>
-                              <a  class="status-icon">
+                              <a  class="status-icon" ng-class="{'isGray': tr.status == 0}" ng-click="ruleStatusChange($index)">
                                 <i class="icon-ok-sign"></i>
                                 <md-tooltip md-direction="bottom">
                                   Change rule status
@@ -54,13 +54,13 @@
                               </a>
                             </td>
                             <td md-cell>
-                              <a  class="opera-icon">
+                              <a  class="opera-icon" ng-click="editRuleItem(tr)">
                                 <i class="icon-file-alt"></i>
                                 <md-tooltip md-direction="bottom">
                                   Edit automate rules
                                 </md-tooltip>
                               </a>
-                              <a  class="opera-icon">
+                              <a  class="opera-icon" ng-click="deleteRule(tr.id)">
                                 <i class="icon-trash"></i>
                                 <md-tooltip md-direction="bottom">
                                   Delete this automate rule
@@ -79,46 +79,46 @@
         <md-content class="md-padding">
           <div class="cs-action-bar-bg">
               <div class="cs-action-bar clearfix">
-                  <div class="left-con">
+                <div class="left-con">
+                  <div class="cs-subform-group">
+                    <md-select aria-label="select" class="cs-subform-select" ng-model="datetype" ng-change="logQueryChange()">
+                        <md-option value="1">Today</md-option>
+                        <md-option value="2">Yesterday</md-option>
+                        <md-option value="3">Last 7 days</md-option>
+                        <md-option value="4">Last 14 days</md-option>
+                        <md-option value="5">This Week</md-option>
+                        <md-option value="6">Last Week</md-option>
+                        <md-option value="7">This Month</md-option>
+                        <md-option value="8">Last Month</md-option>
+                        <md-option value="9">This Year</md-option>
+                        <md-option value="10">Last Year</md-option>
+                        <md-option value="0">Custom</md-option>
+                    </md-select>
+                  </div>
+                  <div class="cs-subform-control" ng-show="datetype==0">
+                    <label class="cs-subform-label date-title">{{'Date Range' | translate}}：</label>
                     <div class="cs-subform-control">
-                      <label class="cs-subform-label date-title">{{'Date Range' | translate}}：</label>
-                      <div class="cs-subform-control">
-                              <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="fromDate"
-                                      ng-max="toDate" is-open="ctrl.dpOpened.a" datepicker-options="dateOptions"
-                                      ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.a=true" type="button">
-                                  {{fromDate | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
-                              </button>
-                            </div>
-                            <label class="cs-subform-label">{{'toDate' | translate}}：</label>
-                            <div class="cs-subform-control">
-                              <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="toDate"
-                                      ng-min="fromDate" is-open="ctrl.dpOpened.b" datepicker-options="dateOptions"
-                                      ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.b=true" type="button">
-                                  {{toDate | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
-                              </button>
-                            </div>
-                    </div>
-                    <div class="cs-subform-group">
-                      <md-select aria-label="select" class="cs-subform-select" ng-model="datetype">
-                          <md-option value="1" selected>Today</md-option>
-                          <md-option value="2">Yesterday</md-option>
-                          <md-option value="3">Last 7 days</md-option>
-                          <md-option value="4">Last 14 days</md-option>
-                          <md-option value="5">This Week</md-option>
-                          <md-option value="6">Last Week</md-option>
-                          <md-option value="7">This Month</md-option>
-                          <md-option value="8">Last Month</md-option>
-                          <md-option value="9">This Year</md-option>
-                          <md-option value="10">Last Year</md-option>
-                          <md-option value="0">Custom</md-option>
-                      </md-select>
-                    </div>
+                            <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="fromDate"
+                                    ng-max="toDate" is-open="ctrl.dpOpened.a" datepicker-options="dateOptions"
+                                    ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.a=true" type="button">
+                                {{fromDate | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
+                            </button>
+                          </div>
+                          <label class="cs-subform-label">{{'toDate' | translate}}：</label>
+                          <div class="cs-subform-control">
+                            <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="toDate"
+                                    ng-min="fromDate" is-open="ctrl.dpOpened.b" datepicker-options="dateOptions"
+                                    ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.b=true" type="button">
+                                {{toDate | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
+                            </button>
+                          </div>
                   </div>
-                  <div class="right-select">
-                    <div class="cs-subform-control search-con">
-                        <input type="text" class="cs-filter-input" ng-model="searchFilter" placeholder="Search...">
-                    </div>
+                </div>
+                <div class="right-select">
+                  <div class="cs-subform-control search-con">
+                      <input type="text" class="cs-filter-input" ng-model="queryLog.searchFilter" placeholder="Search..." ng-change="logQueryChange()">
                   </div>
+                </div>
               </div>
               <div class="table-box">
                   <md-table-container class="repeater-container">
@@ -131,11 +131,11 @@
                           </tr>
                         </thead>
                         <tbody md-body>
-                          <tr ms-row ng-repeat="tr in logs">
+                          <tr ms-row ng-repeat="tr in loglist.logs">
                             <td md-cell>{{tr.time}}</td>
                             <td md-cell>{{tr.name}}</td>
                             <td md-cell>
-                              <a class="status-icon" ng-click="viewLogs($event)">
+                              <a class="status-icon" ng-click="viewLogs(tr)">
                                 <i class="icon-eye-open"></i>
                                 <md-tooltip md-direction="bottom">
                                   View automate logs
@@ -147,6 +147,66 @@
                       </table>
                   </md-table-container>
               </div>
+          </div>
+        </md-content>
+      </md-tab>
+      <md-tab label="Bot Blacklist">
+        <md-content class="md-padding black-list">
+          <h1 class="setting-title">
+            Bot Blacklist
+            <p>Bot Blacklist permits you to add bot rules based on IP / IP range and useragent values.
+          Once bot rules are enabled, they will be applied globally to all active campaigns with bot traffic events excluded from your reporting.</p>
+            <p>Further information regarding the use of the Bot Blacklist can be referenced here.
+          The maximum amount of the bot rules that can be created is {{blacklistCount}}. You can still add {{blacklistCount - data.blacklist.length}} bot rule(s).</p>
+          </h1>
+          <div class="form-column bot-blacklist">
+            <div class="container clearfix">
+              <div class="form-group bot-select">
+                <label>Bot rules: </label>
+                  <md-select class="cs-subform-select" ng-model="data.enabled">
+                      <md-option value="true">Enabled</md-option>
+                      <md-option value="false">Disabled</md-option>
+                  </md-select>
+              </div>
+              <div class="btn-right" ng-show="data.blacklist.length < blacklistCount">
+                <md-button class="md-raised copy-btn main-domain" ng-click="editItem($event, -1)"><i class="icon-plus"></i>Create New</md-button>
+                <!-- <md-button class="md-raised add-another-btn"><i class="material-icons">mode_edit</i>Edit</md-button>
+                <md-button class="md-raised add-another-btn"><i class="material-icons">delete</i>Delete</md-button> -->
+              </div>
+              <div class="data-table">
+                  <div class="table-box">
+                      <table class="table">
+                  <thead>
+                    <tr>
+                      <th>Bot</th>
+                      <th>IP / IP range</th>
+                      <th>User agent</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  <tr ng-repeat="item in data.blacklist track by $index">
+                    <td>
+                      <span uib-dropdown>
+                          <a uib-dropdown-toggle>{{item.name}}</a>
+                          <ul class="dropdown-menu" uib-dropdown-menu role="menu">
+                              <li role="menuitem"><a ng-click="editItem($event, $index)">Edit</a></li>
+                              <li role="menuitem"><a ng-click="deleteItem($event, $index)">Delete</a></li>
+                          </ul>
+                        </span>
+                    </td>
+                    <td>
+                        {{item.ipRules[0]}}
+                        <span style="color:red" ng-if="item.ipRules.length >= 2">{{item.ipRules.length -1}}</span></td>
+                    <td>
+                        {{item.userAgentRules[0]}}
+                        <span style="color:red" ng-if="item.userAgentRules.length >= 2">{{item.userAgentRules.length -1}}</span>
+                    </td>
+                  </tr>
+                  </tbody>
+                </table>
+                  </div>
+              </div>
+            </div>
           </div>
         </md-content>
       </md-tab>
