--- a/Front/src/tpl/fraudFilter.html
+++ b/Front/src/tpl/fraudFilter.html
@@ -1,6 +1,6 @@
 <div ng-cloak class="sudden-change">
   <md-content>
-    <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn add-rule" translate>New Add Rule</md-button>
+    <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn add-rule" ng-click="editRuleItem()" translate>New Add Rule</md-button>
     <md-tabs md-dynamic-height md-border-bottom>
       <md-tab label="Rules">
         <md-content class="md-padding">
@@ -54,7 +54,7 @@
                               </a>
                             </td>
                             <td md-cell>
-                              <a  class="opera-icon" ng-click="editRuleItem(tr)">
+                              <a  class="opera-icon" ng-click="editRuleItem(tr)" href="javascript:;">
                                 <i class="icon-file-alt"></i>
                                 <md-tooltip md-direction="bottom">
                                   Edit automate rules
