--- a/Front/src/tpl/automatedRule-edit-dialog.html
+++ b/Front/src/tpl/automatedRule-edit-dialog.html
@@ -19,7 +19,20 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Campaign<span class="star-icon">*</span>: </label>
                 <div class="col-sm-7">
-                    <selectize config='campaignFilter.config' options='campaignFilter.options' ng-model="item.campaigns" placeholder="Select some campaigns" required></selectize>
+                    <selectize name="campaign" config='campaignFilter.config' options='campaignFilter.options' ng-model="item.campaigns" placeholder="Select some campaigns" required></selectize>
+                    <span style="color:red" ng-show="editForm.campaign.$dirty && editForm.campaign.$invalid">
+                        <span ng-show="editForm.campaign.$error.required">Name is required.</span>
+                    </span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Emails<span class="star-icon">*</span>：</label>
+                <div class="col-sm-7">
+                    <input type="text" name="email" class="form-control" ng-model="item.emails" ng-blur="validateEmail()" required>
+                    <span style="color:red" ng-show="editForm.email.$dirty && editForm.email.$invalid">
+                        <span ng-show="editForm.email.$error.required">Email is required.</span>
+                        <span ng-show="editForm.email.$error.emailValid">Email must be valid URL.</span>
+                    </span>
                 </div>
             </div>
             <div class="form-group">
@@ -49,8 +62,10 @@
                         <md-option value="<"><</md-option>
                     </md-select>
                     <input type="text" name="conValue" class="form-control rule-edit-input cs-subform-select" ng-model="condition.value" required>
+                    <span class="dollar-icon">{{conditionMap[conditionArray[conArrIdx].key]}}</span>
                     <span style="color:red" ng-show="editForm.conValue.$dirty && editForm.conValue.$invalid">
                         <span ng-show="editForm.conValue.$error.required">Value is required.</span>
+                        <span ng-show="editForm.conValue.$error.number">Value is valid.</span>
                     </span>
                     <em ng-click="deleteCondition(condition)" class="rule-condition em-close" ng-if="$index > 0"><i class="material-icons">delete</i></em>
                 </div>
@@ -63,19 +78,19 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Frequency<span class="star-icon">*</span>: </label>
                 <div class="col-sm-7 my-select">
-                    <md-select aria-label="DataFrom" class="cs-subform-select" ng-model="item.frequency">
+                    <md-select aria-label="Frequency" class="cs-subform-select" ng-model="frequency">
                         <md-option value="{{frequency}}" ng-repeat="frequency in frequencys track by $index">{{frequency}}</md-option>
                     </md-select>
                     <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="freDate"
-                            is-open="ctrl.dpOpened.b" datepicker-options="dateOptions"
-                            ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.b=true" type="button" ng-if="showDateSelect()">
-                        {{freDate | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
+                          is-open="ctrl.dpOpened.b" datepicker-options="dateOptions"
+                          close-text="Close" ng-click="ctrl.dpOpened.b=true" type="button" ng-show="showDateSelect()">
+                      {{freDate | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
                     </button>
-                    <md-select aria-label="freTime" class="cs-subform-select" ng-model="freWeek" ng-if="showWeekSelect()">
-                        <md-option ng-repeat="week in weeks" value="{{week.key}}">{{week.display}}</md-option>
+                    <md-select aria-label="FreTime" class="cs-subform-select" ng-model="freWeek" ng-show="showWeekSelect()">
+                        <md-option value="{{week.key}}" ng-repeat="week in weeks track by $index">{{week.display}}</md-option>
                     </md-select>
-                    <md-select aria-label="freTime" class="cs-subform-select" ng-model="freTime" ng-if="showTimeSelect()">
-                        <md-option ng-repeat="hr in hours" value="{{hr}}">{{hr}}</md-option>
+                    <md-select aria-label="FreTime" class="cs-subform-select" ng-model="freTime" ng-show="showTimeSelect()">
+                        <md-option value="{{hr.key}}" ng-repeat="hr in hours track by $index">{{hr.display}}</md-option>
                     </md-select>
                 </div>
             </div>
