modify black function name

--- a/Front/src/tpl/suddenChange.html
+++ b/Front/src/tpl/suddenChange.html
@@ -60,7 +60,7 @@
                                   Edit automate rules
                                 </md-tooltip>
                               </a>
-                              <a  class="opera-icon" ng-click="deleteRule(tr.id)">
+                              <a  class="opera-icon" ng-click="deleteRuleItem(tr.id)">
                                 <i class="icon-trash"></i>
                                 <md-tooltip md-direction="bottom">
                                   Delete this automate rule
