--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -32,6 +32,9 @@
                 </a>
                 <ul class="dropdown-menu animated fadeInRight w" uib-dropdown-menu>
                     <li class="support-li">
+                        <a href="http://discourse.newbidder.com/c/Frequently-Asked-QuestionAnswer"><b>Help Center</b><i class="icon-question-sign"></i></a>
+                    </li>
+                    <li class="support-li">
                         <a clipboard ng-click="copyCon()" text="emailCon"><b>Email</b>：<span ng-model="emailCon">support@newbidder.com</span></a>
                     </li>
                     <li class="support-li">
