--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -77,9 +77,12 @@
                     </div>
                     <div class="pricing-line clearfix">
                         <ol class="free-list">
-                            <li><i class="icon-ok"></i>Skype Support 24/7</li>
-                            <li><i class="icon-ok"></i>3 month data retention</li>
+                            <li><i class="icon-ok"></i>Unlimited events</li>
+                            <li><i class="icon-ok"></i>Skype support 24/7</li>
+                            <li><i class="icon-ok"></i>6 months data retention</li>
                             <li><i class="icon-ok"></i>1 custom tracking domain</li>
+                            <li><i class="icon-ok"></i>Bot filter (1 rule)</li>
+                            <li><i class="icon-ok"></i>Sudden change (1 rule)</li>
                         </ol>
                         <a href="http://panel.newbidder.com/#/access/signup">
                         <button class="free-btn">Select Plan<i class="icon-arrow-right"></i></button>
